--- a/9-stopka-przypieta/css/style.css
+++ b/9-stopka-przypieta/css/style.css
@@ -2,6 +2,7 @@ body {
 	background-color: grey;
 }
 header {
+	font-size: 40px;
 	width: 100%;
 	height: 10%;
 	position: relative;
@@ -25,6 +26,6 @@ footer {
 #copyright {
 	bottom: 0%;
 	text-align: center;
-	font-size: 4vmin;
+	font-size: 20px;
 	color: red;
 }
