--- a/4-video/css/style.css
+++ b/4-video/css/style.css
@@ -1,29 +1,12 @@
-:root {
-  font-size: calc(1vw + 1vh + .5vmin);
-}
-body {
-  background: #111;
-  font: 1rem/1.25 "Montserrat", sans-serif;
-  margin: 0;
-  overflow: hidden;
-}
-video {
-  height: 100%;
-  width: 100%; 
-}
-.vignette {
-  background: rgba(0, 0, 0, 0.6);
-  height: 100%;
-  position: fixed;
-  width: 100%;
-  z-index: 1;
-}
-h1 {
-  color: #fff;
-  font-size: 3rem;
-  margin: 3rem;
+.video iframe{
   position: absolute;
-  text-transform: uppercase;
+  background: #000;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: auto;
+  pointer-events: auto;
   width: 100%;
-  z-index: 2;
+  height: 100%;
 }
