--- a/9-stopka-przypieta/css/style.css
+++ b/9-stopka-przypieta/css/style.css
@@ -6,7 +6,6 @@ header {
 	width: 100%;
 	height: 10%;
 	position: relative;
-	bottom: 0%;
 	padding: 1%;
 	background-color: black;
 	color: white;
@@ -14,8 +13,7 @@ header {
 }
 footer {
 	width: 100%;
-	height: 10%;
-	position: relative;
+	position: fixed;
 	bottom: 0%;
 	padding: 1%;
 	background-color: black;
@@ -23,7 +21,7 @@ footer {
 }
 
 
-#copyright {
+#footer {
 	bottom: 0%;
 	text-align: center;
 	font-size: 20px;
